// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorrectResponse renders snapshot 1`] = `
<div>
  <div>
    <div
      class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    >
      Define Tool Set and Correct Response
    </div>
    <div
      class="MuiTypography-root MuiTypography-body1 css-1rzp2oo-MuiTypography-root"
    >
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </div>
    <div
      class="css-146slsk"
    >
      <div
        class="css-1567tvh"
      >
        <span>
          GRAPHING TOOLS
        </span>
        <div
          class="css-19oj141"
        >
          <span>
            Default graphing tool:
          </span>
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiSelect-root css-ba58we-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-hidden="true"
                class="notranslate"
              >
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-tvv90y"
      />
    </div>
    <div
      class="css-15e8nj6"
    >
      <div
        class="css-1itv5e3"
      >
        Correct Answer
      </div>
      <svg
        aria-hidden="true"
        aria-label="At least 1 graph object should be defined."
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-os5i4q-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="InfoIcon"
        focusable="false"
        style="margin-left: 8px; margin-bottom: auto;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
        />
      </svg>
    </div>
    <div
      axessettings="[object Object]"
      backgroundmarks=""
      data-testid="graph-container"
      domain="[object Object]"
      labels="[object Object]"
      marks=""
      mathmloptions="[object Object]"
      range="[object Object]"
      title=""
      toolbartools="circle,line,label,parabola,point,polygon,ray,segment,sine,vector"
    />
    <div
      class="css-wqlv8j"
    >
      ADD ALTERNATE
    </div>
    <div
      data-testid="alert-dialog"
    />
  </div>
</div>
`;

exports[`CorrectResponse: if answers is null it should still work as expected renders snapshot 1`] = `
<div>
  <div>
    <div
      class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    >
      Define Tool Set and Correct Response
    </div>
    <div
      class="MuiTypography-root MuiTypography-body1 css-1rzp2oo-MuiTypography-root"
    >
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </div>
    <div
      class="css-146slsk"
    >
      <div
        class="css-1567tvh"
      >
        <span>
          GRAPHING TOOLS
        </span>
      </div>
      <div
        class="css-tvv90y"
      />
    </div>
    <div
      class="css-wqlv8j"
    >
      ADD ALTERNATE
    </div>
    <div
      data-testid="alert-dialog"
    />
  </div>
</div>
`;

exports[`CorrectResponse: if answers is undefined it should still work as expected renders snapshot 1`] = `
<div>
  <div>
    <div
      class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    >
      Define Tool Set and Correct Response
    </div>
    <div
      class="MuiTypography-root MuiTypography-body1 css-1rzp2oo-MuiTypography-root"
    >
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </div>
    <div
      class="css-146slsk"
    >
      <div
        class="css-1567tvh"
      >
        <span>
          GRAPHING TOOLS
        </span>
      </div>
      <div
        class="css-tvv90y"
      />
    </div>
    <div
      class="css-wqlv8j"
    >
      ADD ALTERNATE
    </div>
    <div
      data-testid="alert-dialog"
    />
  </div>
</div>
`;

exports[`Tools renders snapshot 1`] = `
<div>
  <div
    class="css-146slsk"
  >
    <div
      class="css-1567tvh"
    >
      <span>
        GRAPHING TOOLS
      </span>
    </div>
    <div
      class="css-tvv90y"
    />
  </div>
</div>
`;
